<resources>
    <string name="app_name">lab2.1</string>
    <string name="editText_main">Enter Your Message here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>